--- a/css/style.css
+++ b/css/style.css
@@ -60,7 +60,7 @@
 
     /* Carousel base class */
     .carousel {
-      margin-bottom: 60px;
+      /*margin-bottom: 60px;*/
     }
 
     .carousel .container {
