--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1986,3 +1986,6 @@ h2,  h3 { page-break-after: avoid; }
     font-weight: bold;
     font-size: 11px;
  }
+ #directory-table {
+    font-size: 12px;
+ }
