--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1986,7 +1986,7 @@ h2,  h3 { page-break-after: avoid; }
     font-weight: bold;
     font-size: 11px;
  }
- #directory-table, #library-table, .infotable, #recent-upload-table {
+ #directory-table, #library-table, .infotable, #recent-upload-table, #user-index-library-table {
     font-size: 12px;
  }
  #directory-table a, #library-table a{
